fix resume spacing

--- a/public/style/_resume.scss
+++ b/public/style/_resume.scss
@@ -6,6 +6,7 @@
     }
 
     padding: 0 4rem;
+    padding-bottom: 20rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;
